docs/tests/parser/structs/invalid/StructOperatorTooManyParams.b
struct Foo {
    operator +(Foo a, Foo b, Foo c) { }
}
